--- a/WhatToEatToday/src/main/resources/templates/fragments/main/menuRecommend.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/menuRecommend.html
@@ -88,6 +88,8 @@
               <label for="예민한">예민한</label>
               <input type="checkbox" name="스트레스 받는" id="스트레스 받는" />
               <label for="스트레스 받는">스트레스 받는</label>
+              <button class="input_submit" onclick="location.href='/customer/recommendResult'">결정하기</button>
+              <button type="reset">다시 고르기</button>
             </form>
           </li>
           <li class="keyword_box__item">
@@ -122,6 +124,8 @@
               <label for="습한">습한</label>
               <input type="checkbox" name="흐린" id="흐린" />
               <label for="흐린">흐린</label>
+              <button >결정하기</button>
+              <button type="reset">다시 고르기</button>
             </form>
           </li>
           <li class="keyword_box__item">
@@ -156,11 +160,11 @@
               <label for="면접 날">면접 날</label>
               <input type="checkbox" name="기념일" id="기념일" />
               <label for="기념일">기념일</label>
+              <button class="input_submit" onclick="location.href='/customer/recommendResult'">결정하기</button>
+              <button type="reset">다시 고르기</button>
             </form>
           </li>
         </ul>
-        <button type="submit" id="input_submit" onclick="location.href='/customer/recommendResult'">결정하기</button>
-        <button>다시 고르기</button>
       </div>
     </main>
     <footer class="footer"></footer>
