--- a/WhatToEatToday/src/main/resources/templates/fragments/script/menuRecommend.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/script/menuRecommend.html
@@ -9,7 +9,7 @@
 
 //--------------------------------------------변수 선언----------------------
 //id:input_submit인 요소를 지정(여기서는 button)
-const button = document.querySelector("#input_submit");
+const button = document.querySelector(".input_submit");
 let checkedItem = []
 
 //---------------------------------------메서드 정의-------------------
