--- a/WhatToEatToday/src/main/resources/templates/fragments/main/members.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/members.html
@@ -21,6 +21,8 @@
               <col class="email_space" />
               <col class="tel_space" />
               <col class="address_space" />
+              <col class="edit_space" />
+              <col class="delete_space" />
             </colgroup>
             <thead>
               <tr>
@@ -32,6 +34,7 @@
                 <th>이메일</th>
                 <th>전화번호</th>
                 <th>주소</th>
+                <th>삭제</th>
               </tr>
             </thead>
             <tbody class="members_body">
@@ -44,6 +47,7 @@
                 <td th:text="${member.getEmail()}">이메일</td>
                 <td th:text="${member.getTel()}">전화번호</td>
                 <td>주소</td>
+                <td><a th:href="@{'/admin/members/delete/' + ${member.getId()}} ">delete</a></td>
               </tr>
             </tbody>
           </table>
