메뉴추천 js 수정

--- a/WhatToEatToday/src/main/resources/templates/fragments/main/menuRecommend.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/menuRecommend.html
@@ -152,8 +152,8 @@
               <label for="당기는 음식이 없는 날">당기는 음식이 없는 날</label>
               <input type="checkbox" name="잠 안오는 날" id="잠 안오는 날" />
               <label for="잠 안오는 날">잠 안오는 날</label>
-              <input type="checkbox" name="배부은데 입 심심한 날" id="배부은데 입 심심한 날" />
-              <label for="배부은데 입 심심한 날">배부은데 입 심심한 날</label>
+              <input type="checkbox" name="배부른데 입 심심한 날" id="배부른데 입 심심한 날" />
+              <label for="배부른데 입 심심한 날">배부른데 입 심심한 날</label>
               <input type="checkbox" name="혼밥하는 날" id="혼밥하는 날" />
               <label for="혼밥하는 날">혼합하는 날</label>
               <input type="checkbox" name="면접 날" id="면접 날" />
