--- a/WhatToEatToday/src/main/resources/templates/fragments/main/menuRecommendResult.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/menuRecommendResult.html
@@ -39,6 +39,7 @@
     
         <ul class="keyword_box">
           <li class="keyword_box__item">
+	        <span th:text=${session.address} style="display:none"></span>
             <form id="section_search">
              
             </form>
