마이페이지 수정 삭제

--- a/WhatToEatToday/src/main/resources/static/css/global.css
+++ b/WhatToEatToday/src/main/resources/static/css/global.css
@@ -113,6 +113,7 @@ button {
   font-family: "jua", Arial, Helvetica, sans-serif;
 }
 
+a,
 button,
 label {
   transition-property: color, background;
