--- a/WhatToEatToday/src/main/resources/static/css/main/myPage.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/myPage.css
@@ -1,1 +1,99 @@
-@charset "utf-8";
+.section h2 {
+  text-align: center;
+  font-size: var(--font-large);
+  color: var(--color-dark-sapphire);
+  margin-bottom: 30px;
+}
+
+.section .mypage {
+  border-radius: 10px;
+  padding: 40px;
+  background-color: var(--color-yue-guang-lan-blue);
+}
+
+.section .mypage::after {
+  content: "";
+  display: block;
+  width: 100%;
+  clear: both;
+}
+
+.section .mypage .mypage__img {
+  float: left;
+  width: 200px;
+  height: 230px;
+  background-color: white;
+  overflow: hidden;
+  border-radius: 5px;
+}
+.section .mypage .mypage__img img {
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+}
+
+.section .mypage .mypage__text {
+  padding-top: 10px;
+  width: calc(100% - 200px);
+  float: left;
+}
+
+.section .mypage .mypage__text .mypage__text__item {
+  margin-bottom: 10px;
+}
+.section .mypage .mypage__text .mypage__text__item label {
+  display: inline-block;
+  text-align: right;
+  width: 140px;
+  padding-right: 10px;
+  font-size: var(--font-medium);
+  vertical-align: middle;
+}
+
+.section .mypage .mypage__text .mypage__text__item span {
+  font-size: var(--font-regular);
+}
+
+.section .mypage .mypage__button__list {
+  margin-top: 30px;
+  width: 100%;
+  float: left;
+}
+
+.section .mypage .mypage__button__list::after {
+  content: "";
+  display: block;
+  width: 100%;
+  clear: both;
+}
+
+.section .mypage .mypage__button__list .mypage__button__item {
+  width: 48%;
+  float: left;
+  height: 50px;
+  overflow: hidden;
+  border-radius: 5px;
+}
+
+.section .mypage .mypage__button__list .mypage__button__item:last-child {
+  margin-left: 4%;
+}
+.section .mypage .mypage__button__list .mypage__button__item .mypage__button {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: var(--font-regular);
+  color: var(--color-dark-sapphire);
+  background-color: whitesmoke;
+}
+
+.section
+  .mypage
+  .mypage__button__list
+  .mypage__button__item
+  .mypage__button:hover {
+  color: whitesmoke;
+  background-color: var(--color-dark-sapphire);
+}
