--- a/WhatToEatToday/src/main/resources/templates/fragments/script/myPage.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/script/myPage.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="EUC-KR">
-<title>Insert title here</title>
-</head>
-<body>
-<script type="text/javascript">
-
-
-</script>
-
-
-
-</body>
+<html xmlns:th="http://www.thymeleaf.org">
+  <th:block th:fragment="script">
+    <script th:inline="javascript">
+      function setAddress() {
+          const span = document.querySelector("#mypage_address")
+          const address = JSON.parse([[${customer.getAddress()}]]);
+          span.innerText = address.addresses[0].roadAddress;
+      }
+      setAddress();
+    </script>
+  </th:block>
 </html>
