--- a/WhatToEatToday/src/main/resources/templates/fragments/script/members.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/script/members.html
@@ -131,7 +131,7 @@
           csv.push(data.join(","))
         }
 
-        downloadCSV(csv.join("\n"), "멤버 정보");
+        downloadCSV(csv.join("\n"), "회원정보");
       }
       function downloadCSV(csv, filename) {
         var csvFile;
