--- a/WhatToEatToday/src/main/resources/static/css/header.css
+++ b/WhatToEatToday/src/main/resources/static/css/header.css
@@ -4,6 +4,7 @@
   top: 0;
   background-color: var(--color-iceland-poppy);
   padding: 20px 0;
+  z-index: 1;
 }
 .header .logo {
   font-size: var(--font-large);
