투두리스트

--- a/WhatToEatToday/src/main/resources/static/css/footer.css
+++ b/WhatToEatToday/src/main/resources/static/css/footer.css
@@ -1,7 +1,7 @@
 .footer {
+  margin-top: -5vh;
+  height: 5vh;
   width: 100%;
-  position: fixed;
-  bottom: 0;
   padding: 15px 0;
   background-color: var(--color-iceland-poppy);
 }
