--- a/WhatToEatToday/src/main/resources/templates/fragments/main/login.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/login.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
   <main class="main" th:fragment="main">
     <div class="inner">
+      <h2>로그인</h2>
       <form action="/login" method="post" th:object="${loginForm}" class="login">
         <fieldset class="login__fieldset">
           <legend class="login__legend">아이디</legend>
