--- a/WhatToEatToday/src/main/resources/static/css/global.css
+++ b/WhatToEatToday/src/main/resources/static/css/global.css
@@ -122,7 +122,7 @@ label {
 
 .main {
   min-height: 100vh;
-  padding: 10vh 0 8vh;
+  padding-top: 10vh;
   background-color: var(--color-flat-flesh);
 }
 
