--- a/WhatToEatToday/src/main/resources/templates/fragments/main/addMenu.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/addMenu.html
@@ -12,6 +12,14 @@
           <input type="image" src="/img/sample.webp" class="menu__input" />
         </fieldset>
         <fieldset class="menu__fieldset">
+          <legend class="menu__legend">카테고리</legend>
+          <select class="menu__input" th:field="*{category}"}>
+            <span th:each="category : ${category}">
+              <option th:value="${category.id}" th:text="${category.name}"></option>
+            </span>
+          </select>
+        </fieldset>
+        <fieldset class="menu__fieldset">
           <legend class="menu__legend">이름</legend>
           <input type="text" class="menu__input" th:field="*{name}" />
         </fieldset>
