--- a/WhatToEatToday/src/main/resources/templates/fragments/main/addMenu.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/addMenu.html
@@ -14,9 +14,8 @@
         <fieldset class="menu__fieldset">
           <legend class="menu__legend">카테고리</legend>
           <select class="menu__input" th:field="*{category}"}>
-            <span th:each="category : ${category}">
-              <option th:value="${category.id}" th:text="${category.name}"></option>
-            </span>
+            <option value=""> 음식 종류 </option>
+              <option th:each="category : ${cate}" th:value="${category.id}" th:text="${category.name}"></option>
           </select>
         </fieldset>
         <fieldset class="menu__fieldset">
