--- a/WhatToEatToday/src/main/resources/templates/fragments/main/viewMenuAll.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/viewMenuAll.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>Insert title here</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org">
 
-    <main class="main">
+
+    <main class="main" th:fragment="main">
       <div class="inner">
         <form action="#" method="post">
           <fieldset class="search">
@@ -20,9 +16,9 @@
             </button>
           </fieldset>
           <fieldset class="category">
-            <button class="category__button">
+            <button class="category__button" type="button">
                 <figure>
-                    <figcaption class="category__button__text">menu</figcaption>
+                    <figcaption class="category__button__text" th:onclick="|location.href='@{/customer/all}'|" >menu</figcaption>
                 </figure>
             </button>
             <button class="category__button">
@@ -65,5 +61,4 @@
       </div>
     </main>
 
-</body>
 </html>
