카테고리 중복 수정
카테고리 중복 수정

--- a/WhatToEatToday/src/main/resources/static/css/main/viewAll.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/viewAll.css
@@ -1,75 +1,68 @@
 .main .inner {
-    padding: 30px 0;
+  padding: 30px 0px;
 }
 
-.search {
-    position: relative;
-    margin-bottom: 100px;
-  }
-  
-  .search__text {
-    width: 100%;
-    padding: 15px;
-    border-radius: 15px 0px 0 15px;
-    border: 0;
-    font-size: var(--font-medium);
-    outline: 0;
-    border: 3px solid var(--color-iceland-poppy);
-  }
-  
-  .search__button {
-    position: absolute;
-    top: 0;
-    left: 100%;
-    background-color: var(--color-iceland-poppy);
-    border: 0;
-    padding: 14px;
-    font-size: var(--font-medium);
-    border: 3px solid var(--color-iceland-poppy);
-    border-radius: 0 15px 15px 0;
-    color: whitesmoke;
-  }
-  
-  .category::after {
-    content: "";
-    display: block;
-    width: 100%;
-    clear: both;
-  }
+.eating_house__list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 40px;
+}
 
-  .category .category__button {
-    color: whitesmoke;
-    float: left;
-    width: 20%;
-    height: 200px;
-    border-radius: 15px;
-    border: 3px solid var(--color-iceland-poppy);
-    background-color: whitesmoke;
-    color: var(--color-carrot-orange);
-    margin-left: 4%;
-    margin-bottom: 4%;
-  }
-  
-  .category .category__button:hover {
-    background-color: var(--color-iceland-poppy);
-    color: whitesmoke;
-  }
-  
-  .category .category__button:hover .category__button__icon {
-    animation: animate var(--animation-duration) ease-out var(--transition-duration)  infinite alternate;
-  }
-  
-  @keyframes animate {
-    0% {
-      transform: rotate(-5deg);
-    }
-    100% {
-      transform: rotate(5deg);
-    }
-  }
-  
-  .category__button__text {
-    font-size: var(--font-medium);
-    font-weight: bold;
-  }
-  
+.eating_house {
+  position: relative;
+  background-color: var(--color-tomato-red);
+  padding: 20px 10px 10px;
+}
+
+.eating_house::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: calc(100% + 10px);
+  margin-top: -100px;
+  margin-left: -15px;
+  height: 10%;
+  background-color: whitesmoke;
+}
+
+.eating_house__inner {
+  display: block;
+  height: 100%;
+  width: 100%;
+}
+
+.eating_house__inner::after {
+  content: "";
+  clear: both;
+  width: 100%;
+  display: block;
+}
+.eating_house__img {
+  border-radius: 5px;
+  vertical-align: middle;
+  height: 80px;
+  width: 100px;
+  float: left;
+  overflow: hidden;
+}
+
+.eating_house__img img {
+  width: 100%;
+  height: 100%;
+  background: url(../../img/sample.webp) no-repeat center 100% / cover;
+}
+
+.eating_house__text {
+  width: calc(100%-80px);
+  padding: 10px;
+  padding-left: 20px;
+  height: 100%;
+  float: left;
+}
+.eating_house__text h2 {
+  margin-bottom: 10px;
+}
+
+.eating_house__text h2 {
+  font-size: var(--font-medium);
+}
