--- a/WhatToEatToday/src/main/resources/templates/fragments/main/editMenu.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/editMenu.html
@@ -3,23 +3,13 @@
   <main class="main" th:fragment="main">
     <div class="inner">
       <form
-        th:action="@{ '/manager/eating_house/edit/' + ${eatingHouse.getId()} + '/menu/add'}"
+        th:action="@{ '/manager/eating_house/edit/' + ${eatingHouse.getId()} + '/menu/edit/' + ${menu.getId()}}"
         method="post"
         th:object="${menuForm}"
         class="menu"
       >
         <fieldset class="menu__fieldset">
-          <input type="image" src="/img/category/음식.png" class="menu__input" />
-<<<<<<< Updated upstream
-=======
-        </fieldset>
-        <fieldset class="menu__fieldset">
-          <legend class="menu__legend">카테고리</legend>
-          <select class="menu__input" th:field="*{category}"}>
-            <option value=""> 음식 종류 </option>
-              <option th:each="category : ${cate}" th:value="${category.id}" th:text="${category.name}"></option>
-          </select>
->>>>>>> Stashed changes
+          <input type="image" src="/img/sample.webp" class="menu__input" />
         </fieldset>
         <fieldset class="menu__fieldset">
           <legend class="menu__legend">이름</legend>
@@ -35,7 +25,8 @@
             step="100"
           />
         </fieldset>
-        <button class="menu__button">등록</button>
+        <button class="menu__button">수정</button>
+        <a th:href="@{ '/manager/eating_house/edit/' + ${eatingHouse.getId()} + '/menu/delete/' + ${menu.getId()}}" class="menu__button">삭제</a>
       </form>
     </div>
   </main>
