--- a/WhatToEatToday/src/main/resources/static/css/header.css
+++ b/WhatToEatToday/src/main/resources/static/css/header.css
@@ -1,33 +1,47 @@
 .header {
-  width: 100%;
-  /*position: fixed;*/
-  top: 0;
-  background-color: var(--color-iceland-poppy);
-  padding: 20px 0;
-  z-index: 1;
+  background: #0a3d62;
+  height: 60px;
 }
-.header .logo {
-  font-size: var(--font-large);
-  color: whitesmoke;
-  float: left;
-}
-.header .navbar {
-  float: right;
-  font-size: var(--font-medium);
-  padding-top: 18px;
+.header .inner {
+  max-width: 1400px;
+  margin: auto;
 }
 
-.header .navbar ul::after {
-  content: "";
-  display: block;
-  width: 100%;
-  clear: both;
+.logo__container {
+  float: left;
+  margin-top: 20px;
+}
+
+.header .logo {
+  font-size: var(--font-regular);
+  color: var(--bs-white);
+  font-family: "hanna2";
+  font-weight: bold;
+}
+
+.header .navbar {
+  float: right;
+  font-size: var(--font-regular);
+  padding-top: 20px;
 }
 
 .header .navbar ul li {
   float: left;
+  font-family: "hanna2";
+  font-size: var(--font-regular);
+
+  width: 90px;
+  height: 40px;
+  border: 1px white;
+  border-radius: 20px;
+  background-color: #0a3d62;
+  color: white;
+  text-align: center;
+  line-height: 40px;
+  margin-top: -10px;
 }
 
-.header .navbar ul li:nth-child(n + 2) {
-  margin-left: 15px;
+.header .navbar ul li:hover {
+  background-color: white;
+  color: #0a3d62;
 }
