--- a/WhatToEatToday/src/main/resources/static/css/main/editCustomerInfo.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/editCustomerInfo.css
@@ -1,12 +1,19 @@
-.main .inner h2 {
-  color: var(--color-dark-sapphire);
+.join {
+  padding: 50px 100px;
+  border: 5px double #0a3d62;
+  border-radius: 25px;
+  margin: 50px 50px 100px;
 }
 
-.join {
-  padding: 10px 50px 0;
+.join__title {
+	font-size: var(--font-large);
+	text-align: center;
+	color: #0a3d62;
+	margin-bottom: 50px;
 }
+
 .join__fieldset {
-  border: 3px solid var(--color-yue-guang-lan-blue);
+  border: 3px solid #0a3d62;
   background-color: white;
   padding-bottom: 10px;
   margin-bottom: 5px;
@@ -31,7 +38,7 @@
   font-size: var(--font-medium);
   padding: 15px;
   width: 100%;
-  background-color: var(--color-yue-guang-lan-blue);
+  background-color: #82ccdd;
   border-radius: 8px;
   color: whitesmoke;
   border: 0;
@@ -52,7 +59,7 @@ a.join__button {
   font-size: var(--font-regular);
   padding: 10px;
   width: 20%;
-  background-color: var(--color-yue-guang-lan-blue);
+  background-color: #82ccdd;
   border-radius: 8px;
   color: whitesmoke;
   border: 0;
@@ -61,6 +68,6 @@ a.join__button {
   margin-right: 2%;
 }
 .join__button:last-child {
-  background-color: var(--color-tomato-red);
+  background-color: #60a3bc;
   margin-top: 30px;
 }
