--- a/WhatToEatToday/src/main/resources/static/css/main/joinAdmin.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/joinAdmin.css
@@ -1,35 +1,40 @@
 .join {
-  padding: 10px 50px 0;
-}
-.join__fieldset {
-  border: 3px solid var(--color-iceland-poppy);
-  background-color: white;
-  padding-bottom: 10px;
-  margin-bottom: 5px;
-  border-radius: 8px;
+	padding: 50px 100px 50px; 
+  border: 5px double #0a3d62;
+  border-radius: 25px;
+  margin: 50px 50px 100px;
 }
 
-.join__legend {
-  font-size: var(--font-regular);
-  padding: 5px 10px;
+.join__fieldset {
+    border: 3px solid #0a3d62; 
   background-color: white;
-  margin-left: 20px;
-  color: #8b8b8b;
-  border-radius: 8px;
+  padding: 5px;
+  margin-bottom: 5px;
+    border-radius: 8px; 
 }
+
+.join__title {
+	font-size: var(--font-large);
+	text-align: center;
+	color: #0a3d62;
+	margin-bottom: 50px;
+}
+
 .join__input {
   padding: 10px;
   width: 100%;
   font-size: var(--font-regular);
+ 
+   border-radius: 8px;
 }
 
 .join__button {
   font-size: var(--font-medium);
   padding: 15px;
   width: 100%;
-  background-color: var(--color-iceland-poppy);
+  background-color: #82ccdd;
   border-radius: 8px;
-  color: whitesmoke;
+  color: white;
   border: 0;
 }
 
@@ -41,15 +46,16 @@
   font-size: var(--font-regular);
   padding: 10px;
   width: 20%;
-  background-color: var(--color-iceland-poppy);
+  background-color: #82ccdd;
   border-radius: 8px;
-  color: whitesmoke;
+  color: white;
   border: 0;
   margin: 0;
   clear: left;
   margin-right: 2%;
 }
+
 .join__button:last-child {
-  background-color: var(--color-squash-blossom);
+  background-color: #60a3bc;
   margin-top: 30px;
 }
