--- a/WhatToEatToday/src/main/resources/templates/fragments/main/myPage.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/myPage.html
@@ -7,7 +7,7 @@
         <article class="mypage">
           <h3 class="blind">마이페이지</h3>
           <figure class="mypage__img">
-            <img src="/img/sample.webp" alt="" />
+            <img src="/img/category/사람.png" alt="" />
             <figcaption class="blind">마이페이지</figcaption>
           </figure>
           <ul class="mypage__text">
