--- a/WhatToEatToday/src/main/resources/static/css/main/addEatingHouse.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/addEatingHouse.css
@@ -1,40 +1,46 @@
 .eating_house {
-  padding: 10px 50px 0;
+  padding: 50px;
+  background-color: #ece6cc;
+  border-radius: 25px;
+  margin: 40px 70px 70px;
 }
+
+.eating_house__title {
+	font-size: var(--font-large);
+	text-align: center;
+	color: #494841;
+	margin-bottom: 50px;
+}
+
 .eating_house__fieldset {
-  border: 3px solid var(--color-iceland-poppy);
+  border: 3px solid #c0bca7;
   background-color: white;
-  padding-bottom: 10px;
+  padding: 8px 0;
   margin-bottom: 5px;
   border-radius: 8px;
 }
 
-.eating_house__legend {
-  font-size: var(--font-regular);
-  padding: 5px 10px;
-  background-color: white;
-  margin-left: 20px;
-  color: #8b8b8b;
-  border-radius: 8px;
-}
 .eating_house__input {
   padding: 10px;
   width: 100%;
-  border: 0;
-  font-size: var(--font-regular);
+  border-radius: 8px;
+  font-size: 24px;
+  color: #494841;
 }
 .eating_house__textarea {
   width: 100%;
   padding: 10px;
+  border-radius: 8px;
   resize: none;
-  font-size: var(--font-regular);
+  font-size: 24px;
+  color: #494841;
 }
 
 .eating_house__button {
   font-size: var(--font-medium);
   padding: 15px;
   width: 100%;
-  background-color: var(--color-iceland-poppy);
+  background-color: #6f6c61;
   border-radius: 8px;
   color: whitesmoke;
   border: 0;
@@ -48,7 +54,7 @@
   font-size: var(--font-regular);
   padding: 10px;
   width: 20%;
-  background-color: var(--color-iceland-poppy);
+  background-color: #c0bca7;
   border-radius: 8px;
   color: whitesmoke;
   border: 0;
@@ -57,6 +63,6 @@
   margin-right: 2%;
 }
 .eating_house__button:last-child {
-  background-color: var(--color-squash-blossom);
+  background-color: #6f6c61;
   margin-top: 30px;
 }
