--- a/WhatToEatToday/src/main/resources/static/css/main/addMenu.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/addMenu.css
@@ -1,11 +1,9 @@
 .menu {
-    background-color: var(--color-azraq-blue);
+    background-color: #dee1d1;
     padding: 40px;
     border-radius: 15px;
   }
   .menu__fieldset {
-    border: 3px solid var(--color-dark-sapphire);
-    background-color: white;
     margin-bottom: 30px;
     padding-bottom: 15px;
     border-radius: 5px;
@@ -17,6 +15,16 @@
   
   .menu__fieldset:nth-child(2) {
     margin-bottom: 50px;
+    border: 3px solid #c0bca7;
+    background-color: white;
+      border-radius: 8px;
+  }
+  
+  .menu__fieldset:nth-child(3) {
+/*     margin-bottom: 50px; */
+    border: 3px solid #c0bca7;
+    background-color: white;
+      border-radius: 8px;
   }
   .menu__legend {
     font-size: var(--font-medium);
@@ -27,9 +35,10 @@
     border-radius: 8px;
   }
   .menu__input {
-    padding: 15px;
+    padding: 10px;
     width: 100%;
     font-size: var(--font-medium);
+     color: #494841;
   }
   
   .menu__button {
@@ -37,7 +46,7 @@
     margin-bottom: 10px;
     padding: 15px;
     width: 100%;
-    background-color: var(--color-yue-guang-lan-blue);
+    background-color: #6f6c61;
     border-radius: 8px;
     color: whitesmoke;
     border: 0;
