--- a/WhatToEatToday/src/main/resources/static/css/main/members.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/members.css
@@ -1,11 +1,3 @@
-.header {
-  padding: 10px 0;
-}
-
-.header .inner {
-  max-width: 1400px;
-}
-
 .main .inner {
   padding: 30px 0;
   max-width: 1400px;
@@ -16,7 +8,7 @@
 }
 
 .members__details[open] .members__summary {
-  border-radius: 5px 5px 0 0;
+  border-radius: 10px 10px 0 0;
 }
 
 .members__summary {
@@ -24,7 +16,7 @@
   padding-left: 30px;
   border-radius: 5px 5px 0 0;
   font-size: var(--font-large);
-  background-color: var(--color-yue-guang-lan-blue);
+  background-color: #0a3d62;
 }
 
 .members__summary::marker {
@@ -45,14 +37,14 @@ input[name="map_active_button"] {
 .members {
   width: 100%;
   border-collapse: collapse;
-  border: 2px solid var(--color-yue-guang-lan-blue);
+  border: 2px solid #0a3d62;
 }
 
 .members .members__caption {
   border-radius: 5px 5px 0 0;
   padding: 15px 0 10px;
   font-size: var(--font-medium);
-  background-color: var(--color-yue-guang-lan-blue);
+  background-color: white;
 }
 
 .members tr th,
@@ -60,16 +52,16 @@ input[name="map_active_button"] {
   padding: 5px 0;
   color: black;
   vertical-align: middle;
-  border: 2px dotted var(--color-yue-guang-lan-blue);
-  border-bottom: 2px solid var(--color-yue-guang-lan-blue);
-  background-color: aliceblue;
+  border: 2px solid #0a3d62;
+  border-bottom: 2px solid #0a3d62;
+  background-color: white;
 }
 
 .members tr th {
-  border: 2px solid var(--color-yue-guang-lan-blue);
+  border: 2px solid #0a3d62;
   font-size: var(--font-regular);
   font-family: "NotoSansKR-Bold";
-  border-bottom: 3px double var(--color-yue-guang-lan-blue);
+  border-bottom: 1px solid #0a3d62;
 }
 
 .members tr td {
@@ -79,9 +71,18 @@ input[name="map_active_button"] {
 }
 
 .members tbody tr td {
-  padding-left: 20px;
-  padding-right: 5px;
+  padding-left: 8px;
   text-align: left;
+}
+
+.members tbody tr td:nth-child(1) {
+	padding-left: 0px;
+	text-align: center;
+}
+
+.members tbody tr td:nth-child(9) {
+	padding-left: 0px;
+	text-align: center;
 }
 
 .members tbody tr td:nth-child(8) label[for*="map_active_button"] {
@@ -111,7 +112,7 @@ input[name="map_active_button"] {
 .members tbody tr td:nth-child(8) label[for="map_close_button"] .map_outer {
   margin-top: 100px;
   padding: 30px;
-  background-color: var(--color-iceland-poppy);
+  background-color: #f5cd79;
   display: inline-block;
   border-radius: 15px;
 }
@@ -132,7 +133,8 @@ input[name="map_active_button"] {
   .map_outer
   figcaption {
   margin-top: 30px;
-  color: whitesmoke;
+  color: black;
+  font-family: "hanna";
 }
 
 .members
@@ -162,3 +164,4 @@ input[name="map_active_button"] {
   color: var(--color-jalapeno-red);
   text-decoration: underline;
 }
+
