--- a/WhatToEatToday/src/main/resources/templates/fragments/head.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/head.html
@@ -5,16 +5,33 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrinkto-fit=no">
     <!-- Custom styles for this template -->
-    <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon/favicon-32x32.png">
     <link href="/css/reset.css" rel="stylesheet" />
     <link href="/css/global.css" rel="stylesheet" />
     <link href="/css/header.css" rel="stylesheet" />
     <link th:href=" '/css/main/' + ${page}  + '.css' " rel="stylesheet">
     <link href="/css/footer.css" rel="stylesheet" />
+
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=ABeeZee&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Acme&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Actor&amp;display=swap">
+    <link rel="stylesheet" href="/static/css/Footer-Clean.css">
+    <link rel="stylesheet" href="/static/css/Highlight-Clean.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.css">
+    <link rel="stylesheet" href="/static/css/Navigation-with-Button.css">
+    <link rel="stylesheet" href="/static/css/Simple-Slider.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
+
     <script
             src="https://kit.fontawesome.com/bfafa52380.js"
             crossorigin="anonymous"
             defer
     ></script>
+
+    <script src="/templates/fragments/script/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.js"></script>
+    <script src="/templates/fragments/script/Simple-Slider.js"></script>
+
     <title th:text = "'오늘 뭐 먹지?| ' + ${page} ">오늘 뭐 먹지?</title>
 </head>
