--- a/WhatToEatToday/src/main/resources/templates/fragments/header.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/header.html
@@ -2,13 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <header class="header" th:fragment="header">
     <div class="inner">
-        <h1 class="logo">
-            <a href="/">
-                오늘 뭐 먹지?
+        <h3 class="logo__container">
+            <a class="logo" href="/">
+                What To Eat Today
             </a>
-        </h1>
+        </h3>
         <nav class="navbar">
-            <ul  th:if=" ${session.login == null} ">
+            <ul th:if=" ${session.login == null} ">
                 <li>
                     <a href="/login">로그인</a>
                 </li>
@@ -32,7 +32,7 @@
                 </th:block>
                 <th:block th:case="Customer">
                     <li>
-                        <a th:href="@{/customer/mypage/ + ${session.member.getId()} }" >마이페이지</a>
+                        <a th:href="@{'/customer/mypage/' + ${session.member.getId()} }" >마이페이지</a>
                     </li>
                 </th:block>
                 <li>
