--- a/WhatToEatToday/src/main/resources/templates/fragments/main/addEatingHouse.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/addEatingHouse.html
@@ -2,15 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <main class="main" th:fragment="main">
     <div class="inner">
-        <h2>매장 등록 하기</h2>
         <form
                 action="/manager/eating_house/add"
                 method="post"
                 th:object="${eatingHouseForm}"
-                class="join"
+                class="eating_house"
         >
+        <address class="eating_house__title">매장 등록 하기</address>
             <fieldset class="eating_house__fieldset">
-                <legend class="eating_house__legend">매장이름</legend>
                 <input
                         class="eating_house__input"
                         type="text"
@@ -21,15 +20,14 @@
                 />
             </fieldset>
             <fieldset class="eating_house__fieldset">
-                <legend class="eating_house__legend">매장 소개</legend>
                 <textarea
                         class="eating_house__textarea"
                         rows="5"
                         th:field="*{description}"
+                        placeholder="매장소개"
                 ></textarea>
             </fieldset>
             <fieldset class="eating_house__fieldset">
-                <legend class="eating_house__legend">주소</legend>
                 <input
                         class="blind"
                         id="address-info"
@@ -42,7 +40,7 @@
                         id="address"
                         onkeyup="addressEmptyCheck()"
                         onclick="getAddress()"
-                        placeholder="Address"
+                        placeholder="주소"
                         autocomplete="off"
                         required
                 />
