--- a/WhatToEatToday/src/main/resources/templates/fragments/main/manager.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/manager.html
@@ -6,7 +6,7 @@
           <li class="eating_house" th:each="eatingHouse : ${eatingHouses}">
             <a th:href="@{'/manager/eating_house/edit/' + ${eatingHouse.getId()} } " class="eating_house__inner">
               <figure class="eating_house__img">
-                <img src="/img/sample.webp" alt="" />
+                <img src="/img/category/가게.png" alt="" />
                 <figcaption class="blind"></figcaption>
               </figure>
               <div class="eating_house__text">
